add email to submission email

--- a/app/views/submission_mailer/submission_notification_to_bioart.html.haml
+++ b/app/views/submission_mailer/submission_notification_to_bioart.html.haml
@@ -6,6 +6,7 @@
       Dear Bioart staff,
     %p
       = @user.name
+      = " (#{@user.email})"
       submitted an application.
     %p Go take a look at it!
     %p Have a great day.
