email address on footer

--- a/app/views/themes/bioart/layouts/_footer.html.haml
+++ b/app/views/themes/bioart/layouts/_footer.html.haml
@@ -6,9 +6,11 @@
       %p
         Suomen Biotaiteen Seura ry / Finnish Bioart Society
         %br/
-        Hilda Flodinin aukio 2a 2 
+        Hilda Flodinin aukio 2a 2
         %br/
         00300 Helsinki Finland
+        %br/
+        info@bioartsociety.fi
   .small-6.columns.medium-3 &nbsp;
   .small-7.medium-3.columns
 
