--- a/app/views/themes/bioart/devise/registrations/new.html.erb
+++ b/app/views/themes/bioart/devise/registrations/new.html.erb
@@ -13,7 +13,7 @@
     <div class="row">
       <div class="small-12 columns">
         <%= f.label 'Your name' %><br />
-        <%= f.email_field :name, autofocus: true %>
+        <%= f.text_field :name, autofocus: true %>
       </div>
     </div>
     <div class="row">
