--- a/app/views/themes/bioart/admin/calls/_form.html.haml
+++ b/app/views/themes/bioart/admin/calls/_form.html.haml
@@ -23,6 +23,8 @@
   .row
     .small-12.large-6.columns= f.input :published, as: :boolean
   .row
+    .small-12.large-6.columns= f.input :active, as: :boolean    
+  .row
     .small-12.large-9.columns= f.input :overview,  as: :ckeditor, input_html: {required: ''}
       
   .row.question_fields
