--- a/app/views/themes/bioart/layouts/_footer.html.haml
+++ b/app/views/themes/bioart/layouts/_footer.html.haml
@@ -15,7 +15,7 @@
   .small-7.medium-3.columns
 
     .icons.float-right
-      .email= link_to image_tag(theme_image_path('layout/email_icon.png')), '#'
+      -#.email= link_to image_tag(theme_image_path('layout/email_icon.png')), '#'
       .fb= link_to image_tag(theme_image_path('layout/fb_icon.png')), 'https://www.facebook.com/groups/bioartsociety/', target: :_blank
       .twitter= link_to image_tag(theme_image_path('layout/twitter_icon.png')), 'https://twitter.com/bioartsociety', target: :_blank
       .instagram= link_to image_tag(theme_image_path('layout/instagram_icon.png')), 'https://www.instagram.com/bioartsociety/', target: :_blank
