--- a/app/views/themes/bioart/layouts/application.html.haml
+++ b/app/views/themes/bioart/layouts/application.html.haml
@@ -68,13 +68,14 @@
               = link_to fa_icon('search'), '#', onclick: '$("#search_field_container").slideToggle();$(".search_icon").fadeOut();'
           .title-bar.large-9.columns.small-12.medium-12
             .title-bar-left
-              %ul.horizontal.menu
+              %ul.horizontal.menu.dropdown{:'data-dropdown-menu' => ''}
                 %li= link_to 'Blog', posts_path
 
                 %li= link_to 'ARS Bioarctica', project_path('ars-bioarctica')
-                %li= link_to 'Projects', projects_path
-
-                %li= link_to 'Activities', activities_path
+                %li
+                  = link_to 'Projects', projects_path
+                  %ul.menu
+                    %li= link_to 'Activities', activities_path
                 %li= link_to 'About', '/about'
                 %li.search.hide-for-small-only
                   = form_tag '/search' do
