--- a/app/views/themes/bioart/layouts/application.html.haml
+++ b/app/views/themes/bioart/layouts/application.html.haml
@@ -69,9 +69,9 @@
           .title-bar.large-9.columns.small-12.medium-12
             .title-bar-left
               %ul.horizontal.menu.dropdown{:'data-dropdown-menu' => ''}
-                %li= link_to 'Blog', posts_path
+                %li= link_to 'News', posts_path
 
-                %li= link_to 'ARS Bioarctica', project_path('ars-bioarctica')
+                %li= link_to 'Residency', project_path('ars-bioarctica')
                 %li
                   = link_to 'Projects', projects_path
                   %ul.menu
