--- a/app/views/themes/bioart/projects/show.html.haml
+++ b/app/views/themes/bioart/projects/show.html.haml
@@ -30,7 +30,7 @@
 
       - unless @project.posts.empty?
         .blog_container
-          .red= link_to 'Blog', project_posts_path(@project)
+          .red= link_to 'News', project_posts_path(@project)
           .row.small-up-1.medium-up-2.large-up-3.xxlarge-up-4.post_carousel
             - @project.posts.published.order(published_at: :desc).take(12).each do |post|
               = link_to post, class: [:post, :columns] do
