--- a/app/views/themes/bioart/admin/activities/_form.html.haml
+++ b/app/views/themes/bioart/admin/activities/_form.html.haml
@@ -41,7 +41,9 @@
           = image_tag ff.object.image.url(:box)
         = ff.input :image
         = ff.link_to_remove "Remove this photo"
-      = f.link_to_add "Add a photo", :photos    
+      = f.link_to_add "Add a photo", :photos
+  .row
+    .small-12.large-8.columns= f.input :published, as: :boolean
   .row
     .small-12.large-8.columns= f.submit 'Save', class: [:button, :small]
 = content_for :jquery do 
