--- a/app/views/themes/bioart/admin/calls/_form.html.haml
+++ b/app/views/themes/bioart/admin/calls/_form.html.haml
@@ -23,7 +23,9 @@
   .row
     .small-12.large-6.columns= f.input :published, as: :boolean
   .row
-    .small-12.large-6.columns= f.input :active, as: :boolean    
+    .small-12.large-6.columns= f.input :active, as: :boolean 
+  .row
+    .small-12.large-6.columns= f.input :ask_preferred_period, as: :boolean, label: 'Ask for the preferred residency period?'   
   .row
     .small-12.large-9.columns= f.input :overview,  as: :ckeditor, input_html: {required: ''}
       
