--- a/app/views/themes/bioart/calls/show.html.haml
+++ b/app/views/themes/bioart/calls/show.html.haml
@@ -77,13 +77,13 @@
             .row
               .medium-2.small-offset-1.small-4.columns.form_label.text-left.left_form= "Website"
               .small-7.medium-4.end.columns= f.input :website, input_html: {required: '' }, label: false
-
-            .row
-              .medium-2.small-offset-1.small-4.columns.form_label.text-left.left_form= "Preferred period"
-              .small-7.medium-4.end.columns
-                = f.input :preferred_start, as: :string, input_html: {required: '' }, label: false
-                %span.between to
-                = f.input :preferred_end, as: :string, input_html: {required: '' }, label: false
+            - if @call.ask_preferred_period == true
+              .row
+                .medium-2.small-offset-1.small-4.columns.form_label.text-left.left_form= "Preferred period"
+                .small-7.medium-4.end.columns
+                  = f.input :preferred_start, as: :string, input_html: {required: '' }, label: false
+                  %span.between to
+                  = f.input :preferred_end, as: :string, input_html: {required: '' }, label: false
 
             = f.fields_for :answers do |ff|
               .row{class:  [ff.object.question.question_type.to_sym == :text ? :has_topline : false,  ff.object.question.question_type.to_sym]}
