privayc policy link

--- a/app/assets/themes/bioart/stylesheets/base.css.scss
+++ b/app/assets/themes/bioart/stylesheets/base.css.scss
@@ -242,7 +242,12 @@ footer {
     }
   }
   
-
+  .privacy {
+    text-align: right;
+    a {
+      color: black;
+    }
+    }
   .icons {
     .email, .fb, .twitter, .instagram, .rss {
       float: left;
