--- a/app/views/themes/bioart/layouts/_footer.html.haml
+++ b/app/views/themes/bioart/layouts/_footer.html.haml
@@ -20,3 +20,5 @@
       .twitter= link_to image_tag(theme_image_path('layout/twitter_icon.png')), 'https://twitter.com/bioartsociety', target: :_blank
       .instagram= link_to image_tag(theme_image_path('layout/instagram_icon.png')), 'https://www.instagram.com/bioartsociety/', target: :_blank
       .rss= link_to image_tag(theme_image_path('layout/rss_icon.png')), '/feed', target: :_blank
+    %br/
+    .privacy= link_to 'Privacy policy', page_path('gdpr-policy')
