basic support for relating users to artists and creating residency stays and relating blog posts to it

--- a/app/assets/themes/bioart/stylesheets/application.css.scss
+++ b/app/assets/themes/bioart/stylesheets/application.css.scss
@@ -20,6 +20,7 @@
  *= require bioart/stylesheets/activities
  *= require bioart/stylesheets/posts
  *= require bioart/stylesheets/searches
+ *= require bioart/stylesheets/residencies
  *= require font-awesome
  *= require slick
  *= require video-js
