--- a/app/assets/themes/bioart/stylesheets/backoffice.css.scss
+++ b/app/assets/themes/bioart/stylesheets/backoffice.css.scss
@@ -18,8 +18,10 @@
 
 @import 'variables';
 
-@import 'foundation-datetimepicker';
 
+.row {
+  max-width: 75rem !important;
+}
 h1, h2, h3, h4, h5, h6 {
   font-family: $rubik;
 }
