--- a/app/views/themes/bioart/admin/posts/_form.html.haml
+++ b/app/views/themes/bioart/admin/posts/_form.html.haml
@@ -22,6 +22,10 @@
 
 
       = f.input :user, collection: User.accessible_by(current_ability), label: 'Posted by: ', member_label: Proc.new{|x| x.name + " / " + x.email}, include_blank: false
+
+      - if (!current_user.artist.nil? && !current_user.artist.stays.empty? ) || (f.object.user.artist && !f.object.user.artist.stays.empty?)
+        = f.input :stay, collection: [current_user.artist&.stays, f.object.user.artist.stays].flatten.compact, label: 'Part of residency: ', member_label: Proc.new{|stay| stay.artist.name + ": " + date_range(stay.start_at, stay.end_at) }
+
   .row.expanded
     .small-12.large-7.columns
       %hr
