--- a/app/views/themes/bioart/admin/posts/_form.html.haml
+++ b/app/views/themes/bioart/admin/posts/_form.html.haml
@@ -9,6 +9,10 @@
             %li= msg
   .row.expanded
     .small-12.large-3.columns= f.input :node, input_html: {required: ''}, collection: Node.accessible_by(current_ability)
+  - unless @post.new_record?
+    - unless @post.wordpress_author.blank?
+      .row.expanded
+        .small-12.large-6.columns= "legacy post, written #{f.object.wordpress_author}"
   .row.expanded
     .small-12.large-6.columns= f.input :title, input_html: {required: ''}, label: 'Post title'
   .row.expanded
@@ -21,11 +25,12 @@
     .small-12.large-6.columns
 
 
-      = f.input :user, collection: User.accessible_by(current_ability), label: 'Posted by: ', member_label: Proc.new{|x| x.name + " / " + x.email}, include_blank: false
+      = f.input :user, collection: User.accessible_by(current_ability).sort_by(&:name), label: 'Posted by: ', member_label: Proc.new{|x| x.name + " / " + x.email}, include_blank: false
 
       - if (!current_user.artist.nil? && !current_user.artist.stays.empty? ) || (f.object.user.artist && !f.object.user.artist.stays.empty?)
-        = f.input :stay, collection: [current_user.artist&.stays, f.object.user.artist.stays].flatten.compact, label: 'Part of residency: ', member_label: Proc.new{|stay| stay.artist.name + ": " + date_range(stay.start_at, stay.end_at) }
-
+        = f.input :stay, collection: [current_user.artist&.stays, f.object.user.artist.stays].flatten.compact.order(&:start_at), label: 'Part of residency: ', member_label: Proc.new{|stay| stay.artist.name + ": " + date_range(stay.start_at, stay.end_at) }
+      - elsif !f.object.wordpress_author.blank?
+        = f.input :stay, collection: Stay.all.order(&:start_at), label: 'Part of residency: ', member_label: Proc.new{|stay| stay.artist.name + ": " + date_range(stay.start_at, stay.end_at) }
   .row.expanded
     .small-12.large-7.columns
       %hr
