--- a/app/views/themes/bioart/layouts/application.html.haml
+++ b/app/views/themes/bioart/layouts/application.html.haml
@@ -73,9 +73,9 @@
 
                 %li= link_to 'Residency', project_path('ars-bioarctica')
                 %li
-                  = link_to 'Projects', projects_path
-                  %ul.menu
-                    %li= link_to 'Activities', activities_path
+                  = link_to 'Program', '/program'
+                  -# %ul.menu
+                  -# %li= link_to 'Activities', activities_path
                 %li= link_to 'About', '/about'
                 %li.search.hide-for-small-only
                   = form_tag '/search' do
