--- a/app/views/themes/bioart/residencies/index.html.haml
+++ b/app/views/themes/bioart/residencies/index.html.haml
@@ -11,12 +11,15 @@
   .row
     .small-12.columns
       .post_content
-        - @artists.sort_by(&:alphabetical_name).each do |artist|
-          - next if artist.stays.empty?
-          .artist
-            = link_to_if artist.has_page?, artist.name, artist
-            %span.dates
-              - if artist.stays.size == 1
-                = date_range(artist.stays.first.start_at, artist.stays.first.end_at)
-              - else
-                = artist.stays.sort_by(&:start_at).map{|x| x.start_at.strftime("%B %Y")}.join('; ')
+        - @artists.map(&:stays).flatten.group_by{|x| x.start_at.year }.sort.reverse.each do |year|
+          .year
+            %strong= year.first
+            - year.last.map(&:artist).sort_by(&:alphabetical_name).uniq.each do |artist|
+              - next if artist.stays.empty?
+              .artist
+                = link_to_if artist.has_page?, artist.name, artist
+                %span.dates
+                  - if artist.stays.size == 1
+                    = date_range(artist.stays.first.start_at, artist.stays.first.end_at)
+                  - else
+                    = artist.stays.sort_by(&:start_at).delete_if{|x| x.start_at.year != year.first || x.end_at.year != year.first}.map{|x| x.start_at.strftime("%B %Y")}.join('; ')
