--- a/app/assets/themes/bioart/stylesheets/application.css.scss
+++ b/app/assets/themes/bioart/stylesheets/application.css.scss
@@ -36,7 +36,7 @@
   font-family: 'Myanmar Sangam MN';
   font-style: normal;
   font-weight: 400;
-  src: url('/assets/bioart/fonts/msmn.ttf') format('truetype');
+  src: asset-url('bioart/fonts/msmn.ttf') format('truetype');
 }
 
 
