--- a/app/assets/themes/bioart/stylesheets/posts.css.scss
+++ b/app/assets/themes/bioart/stylesheets/posts.css.scss
@@ -2,7 +2,7 @@
 @import '_settings';
 
 .posts_index {
-  background: #FFF url(/assets/bioart/images/layout/grey_dots_small.png) repeat;
+  background: #FFF asset-url("bioart/images/layout/grey_dots_small.png") repeat;
 
   .section_title {
     padding: 2.7rem 0;
@@ -78,7 +78,7 @@
 
 
 .post_detail {
-  background: #FFF url(/assets/bioart/images/layout/grey_dots_small.png) repeat;
+  background: #FFF asset-url("bioart/images/layout/grey_dots_small.png") repeat;
   padding: 2.7rem 0;
   .post_image {
      background-color: white;
@@ -147,11 +147,11 @@
         font-family: $titillium;
         margin-bottom: 1em;
         background-color: #000;
-        background: #fff url(/assets/bioart/images/layout/menubar_arrow_blk.png) 0.4em no-repeat;
+        background: #fff asset-url("bioart/images/layout/menubar_arrow_blk.png") 0.4em no-repeat;
         border: 1px solid #000;
         padding: 0.4em 0.4em 0.4em 2em;
         &.prev_post {
-          background: #fff url(/assets/bioart/images/layout/menubar_arrow_reverse_blk.png) 0.4em no-repeat;
+          background: #fff asset-url("bioart/images/layout/menubar_arrow_reverse_blk.png") 0.4em no-repeat;
         }
         padding: 0.5rem 0.4em 0.5em 1.8em;
         a {
