--- a/app/assets/themes/bioart/stylesheets/projects.css.scss
+++ b/app/assets/themes/bioart/stylesheets/projects.css.scss
@@ -83,7 +83,7 @@
 }
 
 .project_detail {
-  background: #f7f7f6 url(/assets/bioart/images/layout/grey_dots_small.png) repeat;
+  background: #f7f7f6 asset-url("bioart/images/layout/grey_dots_small.png") repeat;
   
   .text {
     p, .excerpt, .excerpt p {
@@ -111,7 +111,7 @@
               a {
                 color: #000;
                 &.active {
-                  background: $red url(/assets/bioart/images/layout/menubar_plus.png)  0.4em no-repeat;
+                  background: $red asset-url("bioart/images/layout/menubar_plus.png")  0.4em no-repeat;
                   color: #FFF;
                 }
               }
@@ -129,16 +129,16 @@
           }
         }
         a {
-          background: #f7f7f6 url(/assets/bioart/images/layout/menubar_plus_blk.png)  0.4em no-repeat;
+          background: #f7f7f6 asset-url("bioart/images/layout/menubar_plus_blk.png")  0.4em no-repeat;
           &.active {
-            background: $red url(/assets/bioart/images/layout/menubar_plus.png)  0.4em no-repeat;
+            background: $red asset-url("bioart/images/layout/menubar_plus.png")  0.4em no-repeat;
             color: #FFF;
           }
         }
         
         li.is-submenu-item {
           a {
-             background: #f7f7f6 url(/assets/bioart/images/layout/menubar_arrow_blk.png)  0.4em no-repeat;
+             background: #f7f7f6 asset-url("bioart/images/layout/menubar_arrow_blk.png")  0.4em no-repeat;
           }
         }
       }
@@ -149,7 +149,7 @@
       padding: 0 0 0 0.15em;
       a {
         color: #000;
-        background: #f7f7f6 url(/assets/bioart/images/layout/menubar_arrow_blk.png)  0.4em no-repeat;
+        background: #f7f7f6 asset-url("bioart/images/layout/menubar_arrow_blk.png")  0.4em no-repeat;
 
         padding: 1em 0.7em 1em 2em;
         margin-right: 0.5em;
@@ -157,7 +157,7 @@
         
         text-transform: uppercase;
         &.active {
-          background: $red url(/assets/bioart/images/layout/menubar_arrow.png)  0.4em no-repeat;
+          background: $red asset-url("bioart/images/layout/menubar_arrow.png")  0.4em no-repeat;
           
           color: #FFF;
           
@@ -275,7 +275,7 @@
       clear: both;
       margin-bottom: 1em;
 //      background-color: #;
-      background: white url(/assets/bioart/images/layout/menubar_arrow_blk.png)  0.4em no-repeat;
+      background: white asset-url("bioart/images/layout/menubar_arrow_blk.png")  0.4em no-repeat;
       border: 1px solid #000;
       padding: 0.4em 0.4em 0.4em 2em;
       a {
